...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryPageActivity">

    <TextView
        android:id="@+id/headingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="141dp"
        android:layout_marginRight="141dp"
        android:text="Categories "
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addCategoryBtn"
        android:layout_width="108dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:text="Add Category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTable" />

    <Button
        android:id="@+id/deleteCateogryBtn"
        android:layout_width="104dp"
...
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="85dp" />
    </TableLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
